--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 
 	<div data-role="footer" align="center" data-theme="a" data-position="fixed">
 		<h4>Guillermo Alberto Castillo Romero</h4>
-		<img src="app1/res/android/mdpi1.png" width="56" height="46">	
+		<img src="res/android/mdpi1.png" width="56" height="46">	
 	</div>
 </div>
 
