--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
 <div style="width:50%;">
 <ul data-role="controlgroup" data-type="vertical" data-theme="d">
 <li class="ui-first-child ui-last-child">
-<a href="#Pagina1" data-role="button" id="beep">
+<a href="#Pagina1" data-role="button">
 <h2>App1 Mostrar datos del dispositivo</h2>
 </a>
 </li>
 <ul data-role="controlgroup" data-type="vertical" data-theme="d">
 <li class="ui-first-child ui-last-child">
-<a href="#Pagina2" data-role="button" id="vibrar">
+<a href="#Pagina2" data-role="button" >
 <h2>App5 Vibrar</h2>
 </a>
 </li>
